[gd_scene load_steps=3 format=3 uid="uid://dnnmxd7d8ekff"]

[ext_resource type="Script" path="res://scripts/base_zone.gd" id="1_f2bwo"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ow4js"]
size = Vector3(6, 5, 8)

[node name="BaseZone" type="Node3D"]
script = ExtResource("1_f2bwo")

[node name="Area" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area"]
shape = SubResource("BoxShape3D_ow4js")

[connection signal="body_entered" from="Area" to="." method="_on_enter"]
[connection signal="body_exited" from="Area" to="." method="_on_leave"]
